--- a/src/app/shared-module/nav-bar/nav-bar.component.html
+++ b/src/app/shared-module/nav-bar/nav-bar.component.html
@@ -26,6 +26,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/task" routerLinkActive="active ">Task</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/task/contacts" routerLinkActive="active ">Contact</a>
+    </li>
     <li>
         <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
    
