--- a/src/app/task/contacts/contacts.component.html
+++ b/src/app/task/contacts/contacts.component.html
@@ -9,21 +9,51 @@
 
 
 <div class="row m-5">
-    <div class="card" style="width: 10rem;" *ngFor="let i of result;">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="d-block text-black-dark ">{{i.contactType}}</h3>
-            <button type="button"  (click)="viewAll(i.contactId)">view All</button>
+    <div style="width: 10rem; height :10rem; background-color:#fff;" class="p-2 m-2" *ngFor="let i of result;">
+        
+            <h6 class="d-block text-black-dark ">{{i.contactType}}</h6>
+            <button type="submit"  formtarget="_blank" (click)="viewAll(i.contactId)">view All</button><br>
+            <button type="button"  (click)="open(content2)">Add New</button>
+
         </div>
-        </div>
-      </div>
+
+        <!-- add new contacts -->
+        <div class="modal fade">
+            <ng-template #content2 let-c="close" let-d="dismiss" >
+             <div class="modal-header">
+               <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+                 <span aria-hidden="true">&times;</span>
+               </button>
+             </div>
+             <div class="modal-body">
+
+                <!-- body -->
+                <form [formGroup]="AddContactForm" (ngSubmit)="addContacts(AddContactForm.value)">
+
+
+                        <input id="name" name="name" class="form-control" placeholder="Name of Owner" formControlName="name">
+                        <input id="add" name="add" class="form-control" placeholder="Address" formControlName="address">
+
+                        <input id="num1" name="num1" class="form-control" placeholder="Contact Number" formControlName="num1">
+                        <input id="num2" name="num2" class="form-control" placeholder="Contact Number" formControlName="num2">
+
+
+
+                        <button type="submit" class="btn btn-success" >Add Contacts</button>
+
+                    
+                
+                </form>
+             </div>
+             
+            </ng-template>
+    </div>  
     
 
 <!-- form to add contact types -->
 
-<div class="card" style="width: 16rem;">
-    <div class="card">
-        <div class="card-body">
+
+        <div class="p-2 m-2" style="width: 10rem; height :10rem; background-color:#fff;">
             <button type="button"  (click)="open(content)">+</button>
             <div class="modal fade">
                     <ng-template #content let-c="close" let-d="dismiss" >
@@ -49,10 +79,9 @@
                     </ng-template>
             </div>
         </div>
-    </div>
-</div>
+    
            
     
-
 </div>
+
 
