--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -1,22 +1,27 @@
 <app-nav-bar></app-nav-bar>
 <section id="team" class="pb-5">
     <div class="container">
-        <h5 class="section-title h1">Events</h5>
+       
         <div class="row">
 
 
 
-            <div class="row">
-                <div *ngFor="let e of event">
-                    <div class="col-3">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBK3FmyjIENz16NWEl1iJcIWj8I5n8hs-rl5JPixzw-XppNfKx"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">{{e.eventName}}</h5>
-                                <a class="btn btn-primary" [class.click]="(ClickId==e.id)" (click)=moredetail(e.id)>moredetail</a>
-                            </div>
+            <div *ngFor="let e of event">
+
+                <div (click)=moredetail(e.id) class="card-deck">
+
+                    <div class="card">
+                        <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBK3FmyjIENz16NWEl1iJcIWj8I5n8hs-rl5JPixzw-XppNfKx"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">{{e.eventName}}</h5>
+                            <a id="btn" [class.click]="(ClickId==e.id)" (click)=moredetail(e.id)>moredetail</a>
+                            <br>
+                            <a id="btn" [class.click]="(ClickId==e.id)" (click)=Upgradeevent(e.id)>Upgrade</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
