--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -49,6 +49,8 @@
           <div class="col-6">
             <p>
     lkkkkkkkkkkkkkkkkkkkkkkkk
+
+    
              </p>
 
           </div>
@@ -90,7 +92,9 @@
 
         </button>
         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <a class="dropdown-item" href="pastevent/imageview/1"> Gallery </a>
+          <!-- <a class="dropdown-item" href="pastevent/imageview/9"> Gallery </a> -->
+          <a class="dropdown-item"  (click)=gotoEventImages(event.id)>Images Gallery</a>
+
           <a class="dropdown-item" href="pastevent/uploadpastevent">Create Past Event</a>
           <a class="dropdown-item" href="pastevent/budget">More Details</a>
         </div>
