--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -1,344 +1,20 @@
-<<<<<<< HEAD
-=======
+<!-- <app-logged-header></app-logged-header> -->
 
 <app-nav-bar></app-nav-bar>
-
->>>>>>> 5ea8a901a5a75a753ff2be5be2ce595f0064e8fa
-<!-- <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
-
-
-<div id="wrapper">
-
-    <div  id="sticky"class="panels" >
-        
-        <img id="image" src={{image}}>
-        
+<div class="row mb-2">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="card flex-md-row mb-4 box-shadow h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
           
-    </div>
-   <div id="second"  class="panels">
-
-
-     <div id ="secondNote">
-        <br/><br/><br/>
-     <p>{{event.eventTitle}}</p>
-     <br/>
-     <div class="row" id="inside">
-        <div class="col-xs-1" ></div>
-          <div class="col-xs-5">
-              <h2>About the Event</h2>
-              <p>{{event.eventDescription}}</p>
-            </div>
-     
-        
-        <div class="col-xs-3">
-            <h3>Where</h3>
-            <p>{{event.destination}}</p>
-          </div>
-          <div class="col-xs-3">
-              <h3>When</h3>
-              <p>{{event.startDate}}</p>
-            </div>
+          <h3 class="mb-0">
+            <a class="text-dark">{{event.eventTitle}}</a> 
+          </h3>
+          
+          <p class="card-text mb-auto">{{event.eventDescription}}</p>
+        </div>
+        <img class="card-img-right flex-auto d-none d-md-block" style="width: 50%; height: 50%;"src="assets/_image/trip.jpg" alt="Card image cap">
       </div>
-      <br/><br/>
-     </div>
+    </div>
+    <div class="col-md-2"></div>
    </div>
-
-
-
-
-  
-
-
-
-   
-    
-
-
-    <div id="forth"  class="panels">
-        <div id="forthNote">
-           
-          *ngIf="this.event.type == Trip"
-          <app-two-day-trip></app-two-day-trip>
-          
-          <br/><br/>
-        </div>
-
-       
-      </div>
-
-
-      <div id="b" class="panels">
-          <div id="note">
-              <br/><br/> 
-                <br/><br/>  <br/><br/>         
-                <div class="row" id="row">
-    
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"id="row">
-                        <a href="{{event.url}}"  >
-                      <div class="card mb-5 text-center" style="width: 28rem;">
-                        <img class="card-img-top" id="cimage"src="https://www.fmdos.cl/wp-content/uploads/2018/07/IMG_6114.jpg" alt="Card image cap">
-                        <div class="card-body">
-                          <h4 class="card-title">Tasks</h4>
-                         
-                          
-                         
-                        </div>
-                      </div>
-                      </a>
-                    </div>
-                
-                
-                      <div class="col-sm-3">
-                          <a href="events/viewTask"  >
-                          <div class="card mb-5 text-center" style="width: 28rem;">
-                            <img class="card-img-top"id="cimage" src="https://i.harborcompliance.com/images/industries/payroll-tax/payroll-employer-tax.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <h4 class="card-title">Registered Employees</h4>
-                              
-                              
-                             
-                            </div>
-                          </div>
-                          </a>
-                        </div>
-    
-                        <div class="col-sm-1"></div>
-    
-                </div>
-                  
-    <br/><br/>
-        </div>
-        
-        
-        </div>
-
-</div>
-
-
-
-  
-
-
-
- -->
-<<<<<<< HEAD
-
-    
- <div id="homeback" >
- 
- 
- 
- <div id="part0" >
-   <div class="row">
-     <div class="col">
-        <h1 id="mainH" >{{event.eventTitle}}</h1>
-
-     </div>
-     <div class="col" id="title">
-        <h2>About the Event</h2>
-              <p>{{event.eventDescription}}</p>
-
-     </div>
-     <div class="col" id="title">
-        <h3>When</h3>
-        <p>{{event.startDate}}</p>
-     </div>
-     <div class="col" id="title">
-        <h3>Where</h3>
-        <p>{{event.destination}}</p>
-      </div>
-   </div>
- 
- </div>
- 
- <div id="part1">
-   <h1 id="head">FEATURES</h1>
-     <div id="cardDesk" class="card-deck" >
-        
-         <div class="row">
-           <div class="col-2">
-
-           </div>
-             <div class="col-lg-4">
-               <img class="rounded-circle" src="assets\_image\t.jpg" alt="Generic placeholder image" width="140" height="140">
-               <h2>Task</h2>
-               <p>Visit here to see all upcomming events of the company.You can grab your chance to participate to the event by submiting the forum.You can enjoy your day with family members</p>
-               <p><a class="btn btn-secondary" href="task/list" role="button" >View details &raquo;</a></p>
-             </div><!-- /.col-lg-4 -->
-             <div class="col-lg-4">
-               <img class="rounded-circle" src="assets\_image\e.png" alt="Generic placeholder image" width="140" height="140">
-               <h2>Registered Employees</h2>
-               <p>Visit here to see recently closed events and their details.You can get more details from here.Can generate reports easily.You can visit here to get Contact details of previous event also includes here</p>
-               <p><a class="btn btn-secondary" href="#" role="button" (click)="pastEvent()">View details &raquo;</a></p>
-             </div><!-- /.col-lg-4 -->
-             
-           </div>
-         
-         
-         
-       </div>
- 
- </div>
- 
- 
- 
- <!-- part 2 -->
- 
- <div id="part2" >
-     <h1 id="head">REGISTER</h1>
-     <div id="forthNote" *ngIf="this.event.type ==='OneDayTrip'">
-           
-        <app-one-day-trip></app-one-day-trip>
-        
-        <br/><br/>
-      </div>
-   
-   </div>
-   <div id="part2" *ngIf="this.event.type ==='TwoDayTrip'">
-      <h1 id="head">REGISTER</h1>
-      <div id="forthNote">
-            
-         <app-two-day-trip></app-two-day-trip>
-         
-         <br/><br/>
-       </div>
-    
-    </div>
-    <!-- <div id="part2" *ngIf="this.event.type ==='YearEndParty'">
-        <h1 id="head">REGISTER</h1>
-        <div id="forthNote">
-              
-           <app-year-end-party> </app-year-end-party>
-
-           
-           <br/><br/>
-         </div>
-      
-      </div> -->
- 
- <!-- end of part 2 -->
- 
- 
- 
- 
- 
- 
- 
- </div>
- 
- 
- 
-=======
-
-    
- <div id="homeback" >
- 
- 
- 
-  <div id="part0" >
-    <div class="row">
-      <div class="col">
-         <h1 id="mainH" >{{event.eventTitle}}</h1>
- 
-      </div>
-      <div class="col" id="title">
-         <h2>About the Event</h2>
-               <p>{{event.eventDescription}}</p>
- 
-      </div>
-      <div class="col" id="title">
-         <h3>When</h3>
-         <p>{{event.startDate}}</p>
-      </div>
-      <div class="col" id="title">
-         <h3>Where</h3>
-         <p>{{event.destination}}</p>
-       </div>
-    </div>
-  
-  </div>
-  
-  <div id="part1">
-    <h1 id="head">FEATURES</h1>
-      <div id="cardDesk" class="card-deck" >
-         
-          <div class="row">
-            <div class="col-2">
- 
-            </div>
-              <div class="col-lg-4">
-                <img class="rounded-circle" src="assets\_image\t.jpg" alt="Generic placeholder image" width="140" height="140">
-                <h2>Task</h2>
-                <p>Visit here to see all upcomming events of the company.You can grab your chance to participate to the event by submiting the forum.You can enjoy your day with family members</p>
-                <p><a class="btn btn-secondary" href="#" role="button" (click)="Events()">View details &raquo;</a></p>
-              </div><!-- /.col-lg-4 -->
-              <div class="col-lg-4">
-                <img class="rounded-circle" src="assets\_image\e.png" alt="Generic placeholder image" width="140" height="140">
-                <h2>Registered Employees</h2>
-                <p>Visit here to see recently closed events and their details.You can get more details from here.Can generate reports easily.You can visit here to get Contact details of previous event also includes here</p>
-                <p><a class="btn btn-secondary" href="#" role="button" (click)="pastEvent()">View details &raquo;</a></p>
-              </div><!-- /.col-lg-4 -->
-              
-            </div>
-          
-          
-          
-        </div>
-  
-  </div>
-  
-  
-  
-  <!-- part 2 -->
-  
-  <div id="part2" >
-      <h1 id="head">REGISTER</h1>
-      <div id="forthNote" *ngIf="this.event.type ==='OneDayTrip'">
-            
-         <app-one-day-trip></app-one-day-trip>
-         
-         <br/><br/>
-       </div>
-    
-    </div>
-    <div id="part2" *ngIf="this.event.type ==='TwoDayTrip'">
-       <h1 id="head">REGISTER</h1>
-       <div id="forthNote">
-             
-          <app-two-day-trip></app-two-day-trip>
-          
-          <br/><br/>
-        </div>
-     
-     </div>
-     <!-- <div id="part2" *ngIf="this.event.type ==='YearEndParty'">
-         <h1 id="head">REGISTER</h1>
-         <div id="forthNote">
-               
-            <app-year-end-party> </app-year-end-party>
- 
-            
-            <br/><br/>
-          </div>
-       
-       </div> -->
-  
-  <!-- end of part 2 -->
-  
-  
-  
-  
-  
-  
-  
-  </div>
-  
-  
-  
->>>>>>> 5ea8a901a5a75a753ff2be5be2ce595f0064e8fa
