--- a/src/app/profile/employee-register-by-link/employee-register-by-link.component.html
+++ b/src/app/profile/employee-register-by-link/employee-register-by-link.component.html
@@ -18,7 +18,7 @@
                     
                     <div class="form-row">
                         <div class="form-group col-md-12">
-                          <input  placeholder="Resiter code" class="form-control" type="text" formControlName="resitercode" id="resitercode">
+                          <input  placeholder="Resiter code" class="form-control" type="password formControlName="resitercode" id="resitercode">
                           <small *ngIf="validateControl('resitercode') && hasError('resitercode', 'required')">*register code is required</small>
                        </div>
                        
