--- a/src/app/task/addtask/addtask.component.html
+++ b/src/app/task/addtask/addtask.component.html
@@ -50,7 +50,7 @@
                                     <table class="table table-borderless">
                                         <tr *ngFor="let i of result;" class="form-check">
                                       
-                                    <td><input type="checkbox" class="form-check-input" (change)="onChange(i.empId,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
+                                    <td><input type="checkbox" class="form-check-input" (change)="onChange(i.id,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
                                     <!-- <td><button class="btn btn-light" (click)="selectEmp(i.empId,i.empName)">{{i.empName}}</button></td> -->
                                      
                                     </tr>
